--- a/src/views/not-found.ejs
+++ b/src/views/not-found.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- PARTIAL DEL HEAD-->
-    <%- include("../partials/head.ejs")%>
+    <%- include("./partials/head.ejs")%>
 
     <!-- PARTIAL DEL HEADER-->
-    <%-include ("../partials/header.ejs") %>
+    <%-include ("./partials/header.ejs") %>
    
 <body>
     <H1> Ups! Parece que ocurrió un error. Por favor intentalo nuevamente más tarde</H1>
