--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -9,7 +9,7 @@
             <div class= "header-right">
                 <ul>
                     <% if(locals.isLogged) { %> 
-                        <img class="imagen-avatar" src="/images/user-images/<%=locals.userLogged.imagen %> " alt=""><li> Hola <%=locals.userLogged.name %></a></li>
+                        <img class="imagen-avatar" src="/images/user-images/<%=locals.userLogged.image %> " alt=""><li> Hola <%=locals.userLogged.first_name %></a></li>
                             <ul>
                                 <a href="/usuario/perfil"><li><em>Mi perfil</em></li></a>
                                 <a href="/productos/carrito"><li><i class="fas fa-shopping-cart"></i><em>Mi carrito</em></li></a> 
