--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -20,13 +20,14 @@
                     
                     <div class="formulario-login-div">
                         <label for="email"><strong>EMAIL</strong></label>
-                        <input type="email" name="email" id="email" placeholder="  email@email.com" 
+                        <input type="email" name="email" id="email" placeholder= "email@email.com" 
                         class="formulario-login-input <%= locals.errors && errors.email ? "error-border" : null %>" 
                         value="<%= locals.old && old.email ? old.email : '' %>"> 
                         <% if(locals.errors && errors.email){ %>
                             <div class="fr-error">
                             <%= errors.email.msg %>
                         <% } %>
+                        <div class= "errorEmail errorMensaje"></div>
                     </div>
                     
                     <div class="formulario-login-div">
@@ -38,6 +39,7 @@
                                 <%= errors.password.msg %>
                             </div>
                         <% } %>
+                        <div class= "errorPw errorMensaje"></div>
                     </div>
                     <div class="recordar-usuario-div">
                         <label class="recordar-usuario-label">
@@ -60,6 +62,7 @@
      <!-- INICIO FOOTER  -->
           <!-- PARTIAL DEL FOOTER-->
           <%-include ("../partials/footer.ejs") %>
+          <script src= "/js/login.js" ></script>
         <!-- FIN FOOTER  -->
     </body>
 </html>
