--- a/src/views/users/userlist.ejs
+++ b/src/views/users/userlist.ejs
@@ -12,7 +12,7 @@
         <% usuarios.forEach (usuario => { %>
             <article class="users-container">
                 <div class="description-product">
-                    <a href ="/productos/<%= usuario.id %> "><img src= "images/user-images/<%= usuario.image %>" enctype= ></a>
+                    <a href ="/productos/<%= usuario.id %> "><img src= "/images/user-images/<%= usuario.image %>" enctype= ></a>
                     <h4 class="name"><%= usuario.first_name %> <%= usuario.last_name %> </h4>
                     <br>
                     <p class="datos-usuario"><%= usuario.email %></p>
